--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -214,13 +214,18 @@
       </Separator>
       <HBox alignment="CENTER_RIGHT" prefHeight="58.0" prefWidth="630.0">
          <children>
-            <Button fx:id="btnOpenConfig" mnemonicParsing="false" onAction="#btnOpenConfigOnAction" prefHeight="37.0" prefWidth="116.0" text="Open Config" HBox.hgrow="ALWAYS">
+            <Button fx:id="btnOpenConfig" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#btnOpenConfigOnAction" prefHeight="37.0" prefWidth="116.0" text="Open Config" HBox.hgrow="ALWAYS">
                <HBox.margin>
-                  <Insets bottom="10.0" left="20.0" right="197.0" top="10.0" />
+                  <Insets bottom="10.0" left="20.0" right="250.0" top="10.0" />
                </HBox.margin>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="20.0" top="10.0" />
                </padding>
+            </Button>
+            <Button fx:id="btnSpeedDial" disable="false" maxWidth="100.0" minWidth="100.0" mnemonicParsing="false" onAction="#btnSpeedDialOnAction" prefHeight="37.0" prefWidth="100.0" text="Speed Dial">
+               <HBox.margin>
+                  <Insets left="-150.0" />
+               </HBox.margin>
             </Button>
             <Button fx:id="btnCreate" alignment="CENTER_RIGHT" contentDisplay="CENTER" layoutX="54.0" mnemonicParsing="false" onAction="#updateAction" text="Create / Update" textAlignment="CENTER" AnchorPane.rightAnchor="54.0">
                <HBox.margin>
