--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -19,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="534.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cisco.controller.Controller">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="534.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cisco.controller.Controller">
    <children>
       <GridPane>
          <columnConstraints>
@@ -90,7 +85,7 @@
                   <Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="txtMac" onKeyReleased="#txtMacOnKeyReleased" onKeyTyped="#txtMacOnKeyTyped" promptText="MAC address" GridPane.rowIndex="1">
+            <TextField fx:id="txtMac" onKeyPressed="#txtMacOnKeyPressed" onKeyReleased="#txtMacOnKeyReleased" onKeyTyped="#txtMacOnKeyTyped" promptText="MAC address" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="20.0" left="20.0" right="40.0" top="20.0" />
                </GridPane.margin>
